# TensorProductTest

./: .gitignore  CMakeLists.txt  README.md  TensorProductVolumeOccaKernels.hpp  TensorProductVolumeOrig.hpp  Timer.cpp  Timer.hpp  cutensorProduct.hpp  cutensorWrap.hpp  gemm.cpp  gemmWrap.hpp  main.cpp
okl/: .TensorProductAll.okl.swp  TensorProductAll.okl  TensorProductAll.okl~  TensorProductAllGeneric.okl  TensorProductVolumeFused_Padded.okl  TensorProductVolumeStage1.okl  TensorProductVolumeStage1.okl.bak  TensorProductVolumeStage2.okl  TensorProductVolumeStage3.okl
profile_commands/: ncu_profile.sh  profile.sh
